--- a/less/index.less
+++ b/less/index.less
@@ -54,6 +54,173 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	font: 62.5%
 }
 
+/* My code starts here */
+
+html {
+	background: whitesmoke;
+}
+nav {
+	display: flex;
+	justify-content: flex-end;
+
+
+	a {
+		text-decoration: none;
+		font-size: 1.2rem;
+		color: tomato;
+		margin-right: 4%;
+		margin-top: 5%;
+		&:hover {
+			color: darken(tomato, 10%);
+			font-size: 1.5rem;
+		}
+	} // closes a
+} // closes nav
+
+.top {
+	margin: 2% 4%;
+	padding: 5.2% 1.5%;
+	background: gray;
+
+	img {
+		width: 45%;
+		height: auto;
+	} // closes img
+
+	.title-container {
+		display: flex;
+		flex-direction: column;
+		width: 45%;
+
+		h1 {
+			font-size: 5.5rem;
+			color: tomato;
+			text-align: center;
+		} // closes h1
+	
+		h2 {
+			font-size: 3rem;
+			color: lighten(tomato, 5%);
+			margin-bottom: 2.5%;
+			text-align: center;
+		} // closes h2
+	} // closes .title-container
+
+	h4 {
+		font-size: 2.2rem;
+		color: peachpuff;
+		border-bottom: 1px solid white;
+		padding-bottom: 2%;
+		margin-bottom: 2%;
+	} // closes h4
+
+	p {
+		font-size: 1.2rem;
+		color: white;
+		margin-bottom: 2%;
+	} // closes p
+
+	button {
+		color: white;
+		background:gainsboro;
+		font-size: 2.3rem;
+		&:hover {
+			background: darken(gainsboro, 10%);
+		} // closes hover
+
+		a {
+			text-decoration: none;
+			color: white;
+		} // closes a
+	} // closes button
+} // closes .top
+
+.middle {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin-left: 4%;
+	margin-right: 4%;
+	margin-bottom: 4%;
+} // closes .middle
+
+.middle-container1 {
+	width: 40%;
+
+	h2 {
+		font-size: 3rem;
+		color: gray;
+		margin-bottom: 1.5%;
+	} // closes h2
+
+	p {
+		font-size: 1.2rem;
+		color: gray;
+	} // closes p
+} // closes .middle-container1
+
+.middle-container2 {
+	width: 40%;
+	display: flex;
+	flex-direction: column;
+
+	h3 {
+		font-size: 2rem;
+		color: gray;
+		margin-bottom: 1.5%;
+	} // closes h3
+
+	ul {
+		display: flex;
+		flex-direction: column;
+		align-content: space-between;
+	
+		li {
+			font-size: 1.2rem;
+			color: gray;
+			margin: 1%;
+		} // closes li
+	} // closes ul
+} // closes .middle-container2
+
+.bottom {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-left: 4%;
+	margin-right: 4%;
+		h2 {
+			font-size: 2rem;
+			color: gray;
+			margin-bottom: 1%;
+		} // closes h2
+
+		table {
+			width: 85%;
+			height: 90%;
+			margin-bottom: 3%;
+			tr {
+				margin: 1.5%;
+					th {
+						font-size: 1rem;
+						text-align: left;
+						padding: 1%;
+						border: 1px solid black;
+					} // closes th
+
+					td {
+						font-size: 1rem;
+						padding: 1%;
+						border: 1px solid black;
+					} // closes td
+			} // closes table tr
+		} // closes table
+} // closes .bottom
+
+footer {
+	text-align: center;
+}
